# pre-commit-hook

./: .pre-commit-hooks.yaml  README.md  setup.cfg
check_copyright_header.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
