# setup.cfg
[metadata]
name = check-copyright-header
description = check if all files has the copyright
version = 0.1.0
author = Sebastian Raaphorst & Sergio Troncoso
author_email = [sebastian.raaphorst@noirlab.edu, sergio.troncoso@noirlab.edu]
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-headers = check_headers.main:main